master: Apply SciJava formatting style